// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prepared_xacts.sql > line 11 1`] = `
[
  "CREATE TABLE pxtest1 (foobar VARCHAR(10))",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "pxtest1",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "foobar",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "varchar",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 10,
                          },
                          "location": 37,
                        },
                      },
                    ],
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 13 1`] = `
[
  "INSERT INTO pxtest1 VALUES ('aaa')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "pxtest1",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 28,
                            "sval": {
                              "sval": "aaa",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 17 1`] = `
[
  "BEGIN TRANSACTION ISOLATION LEVEL SERIALIZABLE",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "A_Const": {
                      "location": 34,
                      "sval": {
                        "sval": "serializable",
                      },
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "transaction_isolation",
                  "location": 18,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 22 1`] = `
[
  "SELECT * FROM pxtest1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "pxtest1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 25 1`] = `
[
  "SELECT gid FROM pg_prepared_xacts",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 16,
                  "relname": "pg_prepared_xacts",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "gid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 28 1`] = `
[
  "ROLLBACK PREPARED 'foo1'",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "gid": "foo1",
            "kind": "TRANS_STMT_ROLLBACK_PREPARED",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 43 1`] = `
[
  "COMMIT PREPARED 'foo2'",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "gid": "foo2",
            "kind": "TRANS_STMT_COMMIT_PREPARED",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 59 1`] = `
[
  "PREPARE TRANSACTION 'foo3'",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "gid": "foo3",
            "kind": "TRANS_STMT_PREPARE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 89 1`] = `
[
  "DROP TABLE pxtest1",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "pxtest1",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 108 1`] = `
[
  "CREATE TABLE pxtest3(fff int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "pxtest3",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "fff",
                  "is_local": true,
                  "location": 21,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 118 1`] = `
[
  "  FETCH 1 FROM foo",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 1,
            "portalname": "foo",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 125 1`] = `
[
  "SELECT * FROM pxtest2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "pxtest2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 162 1`] = `
[
  "DROP TABLE pxtest2",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "pxtest2",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepared_xacts.sql > line 163 1`] = `
[
  "  -- will still be there if prepared xacts are disabled
DROP TABLE pxtest4",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "pxtest4",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
